# nethack-rs

./: .gitignore  Cargo.toml  LICENCE.md  README.md  c_object_table.json  plan.md  test_mapping.json
crates/nethack/: Cargo.toml
crates/nethack/src/: main.rs
crates/nh-bevy/: Cargo.toml  ROADMAP.md
crates/nh-bevy/assets/models/: Untitled.glb  treasure_chest.glb
crates/nh-bevy/assets/sounds/: .gitignore  .gitignore~  generate.sh  generate.sh~  sounds.py
crates/nh-bevy/assets/textures/: convert.sh
crates/nh-bevy/src/: lib.rs  main.rs
crates/nh-bevy/src/components/: mod.rs
crates/nh-bevy/src/plugins/: animation.rs  audio.rs  camera.rs  effects.rs  entities.rs  fog.rs  game.rs  gamepad.rs  input.rs  lighting.rs  map.rs  mod.rs  model_assets.rs  models.rs  navigation.rs  sprites.rs
crates/nh-bevy/src/resources/: mod.rs
crates/nh-bevy/tests/: tile_asset_tests.rs
crates/nh-compare/: Cargo.toml
crates/nh-compare/data/: c_function_registry.json  divergence_report_20260216.md  drift_rest_seed42_1000turns.json
crates/nh-compare/data/convergence_history/: rest-only-rogue-seed12345_1771448149.json  rest-only-rogue-seed12345_1771484104.json  rest-only-rogue-seed12345_1771702107.json  rest-only-rogue-seed12345_1771754166.json  rest-only-rogue-seed12345_1771778393.json  rest-only-rogue-seed12345_1771927119.json  rest-only-rogue-seed12345_1771930372.json  rest-only-rogue-seed12345_1771935015.json  rest-only-valkyrie-seed42_1771448153.json  rest-only-valkyrie-seed42_1771484100.json  rest-only-valkyrie-seed42_1771702685.json  rest-only-valkyrie-seed42_1771754683.json  rest-only-valkyrie-seed42_1771778393.json  rest-only-valkyrie-seed42_1771927105.json  rest-only-valkyrie-seed42_1771935015.json  rest-only-valkyrie-seed42_1771941496.json  rest-only-wizard-seed1_1771448149.json  rest-only-wizard-seed1_1771484104.json  rest-only-wizard-seed1_1771703246.json  rest-only-wizard-seed1_1771754166.json  rest-only-wizard-seed1_1771778393.json  rest-only-wizard-seed1_1771927105.json  rest-only-wizard-seed1_1771930897.json  rest-only-wizard-seed1_1771935015.json
crates/nh-compare/data/fixtures/: level_seed100_valkyrie.json  level_seed10_valkyrie.json
crates/nh-compare/src/: diff.rs  lib.rs  report.rs  snapshot.rs
crates/nh-compare/tests/: ci_convergence_gate.rs  combat_edge_cases.rs  combat_system.rs  command_coverage.rs  con_hp_parity.rs  convergence_summary.rs  core_actions.rs  dump_objects.rs  dungeon_cells.rs  dungeon_generation.rs  engulf_reflection.rs  final_audit.rs  function_isolation_parity.rs  function_registry.rs  gates.rs  generate_fixtures.rs  integration.rs  inventory_system.rs  locks_erosion.rs  magic_economy.rs  map_generation_parity.rs  maze_parity.rs  monster_movement.rs  monster_systems.rs  multi_seed_triage.rs  naming_objects.rs  object_properties.rs  object_system.rs  phase20_monster_rays.rs  phase_gates.rs  plan_audit.rs  player_attributes.rs  player_hunger_alignment.rs  potion_scroll_system.rs  promote_stubs.rs  registry_audit.rs  replay_compare.rs  rng_trace_comparison.rs  save_restore.rs  special_levels.rs  (+11 more)
crates/nh-compare/tests/replays/: 02_movement_long.replay  03_combat_basic.replay  05_pickup.replay  06_stairs.replay  07_wait_long.replay  08_diagonal_explore.replay  09_mixed_actions.replay  10_wizard_explore.replay
crates/nh-core/: Cargo.toml
crates/nh-core/src/: consts.rs  gameloop.rs  lib.rs  rng.rs  save.rs
crates/nh-core/src/action/: apply.rs  commands.rs  dig.rs  eat.rs  engrave.rs  extended.rs  fountain.rs  help.rs  jump.rs  keybindings.rs  kick.rs  level_change.rs  mod.rs  movement.rs  music.rs  name.rs  open_close.rs  pickup.rs  pray.rs  quaff.rs  read.rs  search.rs  teleport.rs  throw.rs  trap.rs  wear.rs  zap.rs
crates/nh-core/src/combat/: artifact.rs  attack_type.rs  damage_type.rs  mhitm.rs  mhitu.rs  mod.rs  uhitm.rs
crates/nh-core/src/data/: artifacts.rs  mod.rs  monsters.rs  objects.rs  roles.rs  tile.rs
crates/nh-core/src/dungeon/: bones.rs  cell.rs  corridor.rs  dlevel.rs  drawbridge.rs  economy.rs  endgame.rs  generation.rs  level.rs  mapseen.rs  maze.rs  mod.rs  quest.rs  rect.rs  region.rs  room.rs  shop.rs  special_level.rs  special_rooms.rs  topology.rs  trap.rs
crates/nh-core/src/magic/: advanced.rs  advanced_spells.rs  artifacts.rs  casting_stances.rs  components.rs  cursed_items.rs  detect.rs  elemental_reactions.rs  enchantment.rs  equipment.rs  genocide.rs  identification.rs  mastery_advancement.rs  metamagic.rs  mod.rs  potion.rs  potions.rs  property_binding.rs  rings.rs  ritual_casting.rs  school_specialization.rs  scroll.rs  special_items.rs  spell.rs  spell_advancement.rs  spell_channeling.rs  spell_conditions.rs  spell_critical.rs  spell_customization.rs  spell_overcharge.rs  spell_persistence.rs  spell_research.rs  spell_synergies.rs  targeting.rs  terrain_modification.rs  zap.rs
crates/nh-core/src/monster/: ai.rs  attack_selection.rs  casting.rs  combat_hooks.rs  item_usage.rs  lifecycle.rs  makemon.rs  mod.rs  monst.rs  morale.rs  permonst.rs  personality.rs  tactical_ai.rs  tactics.rs  throw.rs  worm.rs
crates/nh-core/src/object/: container.rs  inventory.rs  mkobj.rs  mod.rs  obj.rs  objclass.rs  objname.rs
crates/nh-core/src/player/: alignment.rs  attributes.rs  conduct.rs  death.rs  hunger.rs  init.rs  mod.rs  polymorph.rs  properties.rs  role.rs  skills.rs  (+1 more)
crates/nh-core/tests/: tile_tests.rs
crates/nh-player/: Cargo.toml
crates/nh-player/examples/: combat_compare.rs  comparison.rs  fuzz_test.rs  object_compare.rs  rl_bot.rs  rl_bot_advanced.rs  rl_bot_parallel.rs
crates/nh-player/src/: compare.rs  ffi.rs  lib.rs
crates/nh-polkadot/: Cargo.toml  Makefile  riscv64emac-unknown-none-polkavm.json  rust-toolchain.toml
crates/nh-polkadot/.cargo/: config.toml
crates/nh-polkadot/src/: main.rs
crates/nh-save/: Cargo.toml
crates/nh-save/src/: lib.rs
crates/nh-tui/: Cargo.toml
crates/nh-tui/src/: app.rs  display.rs  icons.rs  input.rs  lib.rs  theme.rs
crates/nh-tui/tests/: tile_rendering_tests.rs
crates/nh-ui/: Cargo.toml
crates/nh-ui/src/: app.rs  display.rs  input.rs  lib.rs
(+200 files in other folders)
