[workspace]
resolver = "2"
members = [
    "crates/nh-core",
    "crates/nh-data",
    "crates/nh-ui",
    "crates/nh-save",
    "crates/nethack",
    "crates/nh-test-compare",
    "crates/nh-bevy",
]

[workspace.package]
version = "0.1.7"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates
nh-core = { path = "crates/nh-core" }
nh-data = { path = "crates/nh-data" }
nh-ui = { path = "crates/nh-ui" }
nh-save = { path = "crates/nh-save" }

# UI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
bitflags = "2.6"
thiserror = "2.0"
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

# RNG
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.5"
