[workspace]
resolver = "2"
members = [
    "crates/nh-core",
    "crates/nh-tui",
    "crates/nh-test",
    "crates/nh-compare",
    "crates/nh-bevy",
    "crates/nh-player",
    "crates/nh-assets",
]

[workspace.package]
version = "0.1.11"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
# Internal crates
nh-core = { path = "crates/nh-core" }
nh-tui = { path = "crates/nh-tui" }
nh-test = { path = "crates/nh-test" }
nh-compare = { path = "crates/nh-compare" }
nh-player = { path = "crates/nh-player" }
nh-assets = { path = "crates/nh-assets" }

# UI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
bitflags = "2.6"
thiserror = "2.0"
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

# Time and dates
chrono = "0.4"

# File operations
flate2 = "1.0"
atty = "0.2"
dirs = "5.0"

# RNG
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.5"
