[workspace]
resolver = "3"
members = [
    "crates/nh-core",
    "crates/nh-tui",
    "crates/nh-test",
    "crates/nh-compare",
    "crates/nh-bevy",
    "crates/nh-player",
    "crates/nh-assets",
    "crates/nh-rng",
]

exclude = [
  # Note: crates/nh-polkadot is NOT a workspace member.
  "crates/nh-polkadot",
  # It requires a nightly toolchain and custom RISC-V target (PolkaVM).
  # Build it independently: cd crates/nh-polkadot && cargo build --release
]

[workspace.package]
version = "0.1.14"
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
# Internal crates
nh-core = { path = "crates/nh-core" }
nh-tui = { path = "crates/nh-tui" }
nh-test = { path = "crates/nh-test" }
nh-compare = { path = "crates/nh-compare" }
nh-player = { path = "crates/nh-player" }
nh-assets = { path = "crates/nh-assets" }
nh-rng = { path = "crates/nh-rng" }

# UI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
bitflags = "2.6"
bytes = { version = ">=1.11.1" }
thiserror = { version = "2.0", default-features = false }
strum = { version = "0.26", default-features = false, features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

# Time and dates
chrono = "0.4"

# File operations
flate2 = "1.0"
atty = "0.2"
dirs = "5.0"

# RNG
rand = { version = "0.8", default-features = false }
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.5"
