[package]
name = "nh-bevy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nethack3d"
path = "src/main.rs"

[dependencies]
# Internal crates
nh-core = { path = "../nh-core" }

# Bevy
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_egui = "0.31"

# Utilities
fastrand = "2.0"
