[package]
name = "nh-compare"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
nh-core = { workspace = true }
nh-rng = { workspace = true }
nh-test = { workspace = true }
serde_json.workspace = true
serial_test = "3.1.1"
