[package]
name = "nh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core game logic for NetHack clone"

[features]
extensions = []

[dependencies]
bitflags.workspace = true
thiserror.workspace = true
strum.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
atty.workspace = true
dirs.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest.workspace = true
