[package]
name = "nh-player"
version.workspace = true
edition.workspace = true
license.workspace = true

[[example]]
name = "comparison"
path = "examples/comparison.rs"

[dependencies]
nh-core = { workspace = true }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
anyhow = "1.0"
thiserror = "1.0"
rand = { workspace = true }
rand_chacha = { workspace = true }
ndarray = { version = "0.16", features = ["rayon"] }
nalgebra = "0.33"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-nn = { version = "0.9.1", features = ["metal"] }
itertools = "0.13"
regex = "1.10"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0"
nh-test = { workspace = true }

[build-dependencies]
cc = "1.0"
