[package]
name = "nh-polkadot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nh_polkadot"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
nh-core = { path = "../nh-core", default-features = false, features = ["polkadot"] }
polkavm-derive = "0.25.0"
simplealloc = { git = "https://github.com/paritytech/polkavm.git", rev = "ff37df6bf75201ef9e5f535762d267d7990c96d2" }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
tiny-keccak = { version = "2", features = ["keccak"] }

[dependencies.uapi]
package = "pallet-revive-uapi"
git = "https://github.com/paritytech/polkadot-sdk.git"
rev = "b7b7f0c50f6ce8bad7a7a3a10139e53714740b4e"
default-features = false
features = ["unstable-hostfn"]
