[package]
name = "nh-save"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Save/restore system for NetHack clone"

[dependencies]
nh-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs = "5.0"
