[package]
name = "nh-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI layer using ratatui for NetHack clone"

[[bin]]
name = "nethack"
path = "bin/nethack.rs"


[dependencies]
nh-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
strum.workspace = true
clap.workspace = true
